# pdf2svg

./: .editorconfig  README.md  pyproject.toml
pdf2svg/: cli.py
pdf2svg/models/: __init__.py  convert.py  page.py
pdf2svg/utils/: get_dim.py
